# rsi-break

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  default.nix  flake.nix  rsi-break.cabal
app/: Main.hs
popup/: Main.hs
src/RsiBreak/: Actions.hs  Controller.hs  Model.hs  RealMain.hs  Settings.hs  Sound.hs  View.hs
src/RsiBreak/Model/: Minutes.hs  Settings.hs
src/RsiBreak/Widget/: Clockdown.hs  Settings.hs  Timer.hs
