cabal-version:      3.0
name:               rsi-break
version:            0.1.0.0
synopsis:           Let your mind know that your hands need a rest!
license:            BSD-2-Clause
license-file:       LICENSE
author:             Ruben Astudillo
maintainer:         ruben.astud@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
data-files: assets/sound/bell.wav
            assets/sound/bell.mp3
            assets/images/red-button.png
            assets/images/red-button-hover.png
            assets/images/monomer-logo.svg
            assets/images/icon.png
            assets/fonts/Roboto-Italic.ttf
            assets/fonts/Roboto-Bold.ttf
            assets/fonts/remixicon.ttf
            assets/fonts/Roboto-Regular.ttf
            assets/fonts/Roboto-Medium.ttf

-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  RsiBreak.RealMain
                      RsiBreak.Widget.Settings
                      RsiBreak.Widget.Timer
                      RsiBreak.Widget.Clockdown
                      RsiBreak.Model.Minutes
                      RsiBreak.Model.Settings
                      RsiBreak.Actions
    other-modules:    Paths_rsi_break
    default-extensions: StrictData
                        OverloadedStrings
                        ImportQualifiedPost
    -- other-extensions:
    build-depends:    base >= 4.16.4.0 && < 4.18,
                      monomer,
                      lens,
                      text,
                      text-show,
                      async,
                      time,
                      process,
                      config-ini,
                      directory,
                      filepath
    hs-source-dirs:   src
    default-language: Haskell2010

executable rsi-break
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts=all -with-rtsopts=-N2
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.16.4.0 && < 4.18,
        rsi-break
    hs-source-dirs:   app
    default-language: Haskell2010

executable rsi-break-popup
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts=all -with-rtsopts=-N2
    other-modules:    Paths_rsi_break
    -- other-extensions:
    build-depends:
        base >= 4.16.4.0 && < 4.18,
        process,
        monomer
    hs-source-dirs:   popup
    default-language: Haskell2010

test-suite rsi-break-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4.16.4.0 && < 4.18,
        rsi-break
